force-app/main/default/objects/Address_Book__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Location city of the event</description>
    <inlineHelpText>Enter the location city of the event</inlineHelpText>
    <label>City</label>
    <length>10</length>
    <type>Text</type>
</CustomField>