force-app/main/default/objects/Address_Book__c/fields/Landmark__c.field-meta.xml
<CustomField>
    <fullName>Landmark__c</fullName>
    <description>Landmark of event location</description>
    <inlineHelpText>Enter landmark near event location</inlineHelpText>
    <label>Landmark</label>
    <length>50</length>
    <type>Text</type>
</CustomField>