force-app/main/default/objects/Address_Book__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <description>Postal code of Event Location</description>
    <inlineHelpText>Enter Postal code of Event Location</inlineHelpText>
    <label>Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>