force-app/main/default/objects/Address_Book__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <description>State Location of the event</description>
    <inlineHelpText>Enter the State of the event</inlineHelpText>
    <label>State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>