force-app/main/default/objects/Address_Book__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <description>Street no. of the event location</description>
    <inlineHelpText>Enter your street number</inlineHelpText>
    <label>Street</label>
    <length>10</length>
    <type>Text</type>
</CustomField>